tests/error/linear_errors/duplicate_subscript_literal.err
Error: Copy violation (at $FILE:12:24)
   | 
10 | def foo() -> None:
11 |     external_reg = array((qubit() for _ in range(2)))
12 |     cx(external_reg[0], external_reg[0])
   |                         ^^^^^^^^^^^^^^^ Subscript `external_reg[...]` with non-copyable type `qubit`
   |                                         cannot be borrowed ...

Note:
   | 
11 |     external_reg = array((qubit() for _ in range(2)))
12 |     cx(external_reg[0], external_reg[0])
   |        --------------- Subscript `external_reg[...]` already borrowed here

Guppy compilation failed due to 1 previous error
